--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "crypto-browserify": "^3.12.0"   // Add this line
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
