--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "crypto-browserify": "^3.12.0"   // Add this line
+    "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
