--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,25 @@
-# backend/Dockerfile
+# Use Node base image
 FROM node:18
 
+# Set working directory
 WORKDIR /app
 
-COPY package*.json ./
+# Copy backend files
+COPY backend ./backend
+WORKDIR /app/backend
 RUN npm install
 
-COPY . .
+# Copy frontend files and build them
+WORKDIR /app
+COPY frontend ./frontend
+WORKDIR /app/frontend
+RUN npm install
+RUN npm run build
 
-EXPOSE 5000
-CMD ["npm", "start"]
+# Serve frontend using static file server (e.g., serve)
+RUN npm install -g serve
+
+# Use backend as entrypoint (adjust if you use a framework)
+WORKDIR /app/backend
+EXPOSE 3000
+CMD ["node", "index.js"]
