--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,13 @@
-# Use Node base image
 FROM node:18
 
-# Set working directory
 WORKDIR /app
 
-# Copy backend files
-COPY backend ./backend
-WORKDIR /app/backend
-RUN npm install
+COPY . .
 
-# Copy frontend files and build them
-WORKDIR /app
-COPY frontend ./frontend
-WORKDIR /app/frontend
-RUN npm install
-RUN npm run build
+RUN npm install && npm run build
 
-# Serve frontend using static file server (e.g., serve)
 RUN npm install -g serve
 
-# Use backend as entrypoint (adjust if you use a framework)
-WORKDIR /app/backend
-EXPOSE 3000
-CMD ["node", "index.js"]
+EXPOSE 5173
+
+CMD ["serve", "-s", "dist", "-l", "5173"]
